# sshashkov-templatepwa

./: .agent.env.example  .docker.env  .docker.env.example  .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
backend/: AGENTS.md  Dockerfile  __init__.py  config.py  dev.py  main.py
backend/auth/: access.py  passwords.py  routes.py  tokens.py
backend/db/: AGENTS.md  connection.py  migrations.py  notes.py  refresh_sessions.py  seed.py  sqlite_time.py  users.py
backend/http/: __init__.py  json_api.py  middleware.py  routes.py
backend/migrations/: 001_create_users.py  002_create_refresh_sessions.py  003_create_notes.py
backend/tests/: conftest.py  test_auth.py  test_notes.py  test_sqlite_time.py  test_ws.py
backend/ws/: hub.py  routes.py
deploy/local/: Caddyfile
docs/: README.md  caprover.md  comparison.md  coolify.md  custom-caddy.md  custom-traefik.md  dokploy.md  portainer.md
frontend/: .dockerignore  .prettierignore  AGENTS.md  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  playwright.config.ts  playwright.docker.config.js  playwright.docker.config.ts  prettier.config.cjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.setup.ts
frontend/scripts/: agent_browser_runner.mjs  test-e2e-docker.sh
scripts/: agent_db_snapshot.py  agent_sql.py  docker-compose.sh  kill_port.sh
(+19 files in other folders)
